[package]
name = "sqlite3-sys"
version = "0.17.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Ivan Stankovic <pokemon@fly.srk.fer.hr>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jean-Daniel Michaud <jean.daniel.michaud@gmail.com>",
    "Vincenzo Palazzo <vincenzopalazzodev@gmail.com>",
]
description = "The package provides bindings to SQLite."
documentation = "https://docs.rs/sqlite3-sys"
homepage = "https://github.com/stainless-steel/sqlite3-sys"
repository = "https://github.com/stainless-steel/sqlite3-sys"
categories = ["database", "external-ffi-bindings"]
keywords = ["database"]

[features]
default = ["linkage"]

linkage = ["sqlite3-src"]
bundled = ["sqlite3-src/bundled"]

encryption = []

[dependencies.sqlite3-src]
version = "0.6"
optional = true
